[package]
name = "basicmethod"
version = "0.1.0"
edition = "2021"
description = "Add constructor, get and set method using derive macro"
author = "Cheries Mewengkang<mcheries@yahoo.com>"
license = "MIT or Apache-2.0"
readme = "README.md"
keywords = ["utility", "proc_macro", "derive_macro", "auto_methods"]

[lib]
proc_macro = true

[dependencies]
proc-macro2 = "1.0.69"
quote = "1.0.33"
syn = { version = "2.0.39", features = ["extra-traits"] }

[dev-dependencies]
trybuild = { version = "1.0.85", features = ["diff"] }

